error.txt
    Checking ranvier-http v1.0.0-rc.1 (F:\project\ranvier\ranvier-workspace\ranvier\http)
warning: unused import: `serde_json::Value`
  --> http\src\ingress.rs:32:5
   |
32 | use serde_json::Value;
   |     ^^^^^^^^^^^^^^^^^
   |
   = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: unused imports: `Response` and `header::CONTENT_TYPE`
 --> http\src\sse.rs:2:12
  |
2 | use http::{header::CONTENT_TYPE, Response};
  |            ^^^^^^^^^^^^^^^^^^^^  ^^^^^^^^

warning: unused imports: `BodyExt` and `StreamBody`
 --> http\src\sse.rs:3:22
  |
3 | use http_body_util::{StreamBody, BodyExt};
  |                      ^^^^^^^^^^  ^^^^^^^

warning: unused import: `StreamExt`
 --> http\src\sse.rs:7:36
  |
7 | use futures_util::stream::{Stream, StreamExt};
  |                                    ^^^^^^^^^

warning: unused variable: `parts`
    --> http\src\ingress.rs:1426:59
     |
1426 |             let handler: RouteHandler<R> = Arc::new(move |parts, _res| {
     |                                                           ^^^^^ help: if this is intentional, prefix it with an underscore: `_parts`
     |
     = note: `#[warn(unused_variables)]` (part of `#[warn(unused)]`) on by default

warning: unused variable: `registry`
    --> http\src\ingress.rs:1427:21
     |
1427 |                 let registry = registry.clone();
     |                     ^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_registry`

warning: variable does not need to be mutable
    --> http\src\ingress.rs:1598:25
     |
1598 |                     let mut res = (entry.handler)(parts, &resources).await;
     |                         ----^^^
     |                         |
     |                         help: remove this `mut`
     |
     = note: `#[warn(unused_mut)]` (part of `#[warn(unused)]`) on by default

warning: variable does not need to be mutable
    --> http\src\ingress.rs:1612:25
     |
1612 |                     let mut res = route_service.oneshot(req).await;
     |                         ----^^^
     |                         |
     |                         help: remove this `mut`

warning: variable does not need to be mutable
    --> http\src\ingress.rs:1632:21
     |
1632 |                 let mut fallback_res = if let Some(ref fb) = fallback {
     |                     ----^^^^^^^^^^^^
     |                     |
     |                     help: remove this `mut`

warning: `ranvier-http` (lib) generated 9 warnings (run `cargo fix --lib -p ranvier-http` to apply 9 suggestions)
    Checking graphql-service-demo v1.0.0-rc.1 (F:\project\ranvier\ranvier-workspace\ranvier\examples\graphql-service-demo)
error[E0432]: unresolved imports `ranvier_core::Axon`, `ranvier_core::Event`
 --> examples\graphql-service-demo\src\main.rs:2:20
  |
2 | use ranvier_core::{Axon, Schematic, Transition, Event, Outcome};
  |                    ^^^^                         ^^^^^
  |                    |                            |
  |                    |                            no `Event` in the root
  |                    no `Axon` in the root        help: a similar name exists in the module: `event`
  |
  = help: consider importing this struct instead:
          tracing::Event

error[E0432]: unresolved import `ranvier_macros::schematic`
 --> examples\graphql-service-demo\src\main.rs:3:5
  |
3 | use ranvier_macros::schematic;
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^ no `schematic` in the root
  |
help: consider importing this module instead
  |
3 - use ranvier_macros::schematic;
3 + use ranvier_core::schematic;
  |

error[E0433]: failed to resolve: use of unresolved module or unlinked crate `async_trait`
  --> examples\graphql-service-demo\src\main.rs:44:3
   |
44 | #[async_trait::async_trait]
   |   ^^^^^^^^^^^ use of unresolved module or unlinked crate `async_trait`

error: cannot find attribute `edge` in this scope
  --> examples\graphql-service-demo\src\main.rs:54:7
   |
54 |     #[edge(on = "start", to = "completed")]
   |       ^^^^

error[E0407]: method `execute` is not a member of trait `Transition`
  --> examples\graphql-service-demo\src\main.rs:46:5
   |
46 | /     async fn execute(&self, _ctx: &mut ranvier_core::Context) -> ranvier_core::Result<Outcome> {
47 | |         tracing::info!("Workflow triggered via GraphQL");
48 | |         Ok(Outcome::done("completed"))
49 | |     }
   | |_____^ not a member of trait `Transition`

error[E0425]: cannot find type `Context` in crate `ranvier_core`
  --> examples\graphql-service-demo\src\main.rs:46:54
   |
46 |     async fn execute(&self, _ctx: &mut ranvier_core::Context) -> ranvier_core::Result<Outcome> {
   |                                                      ^^^^^^^ not found in `ranvier_core`
   |
help: consider importing one of these items
   |
 1 + use std::task::Context;
   |
 1 + use async_graphql::Context;
   |
 1 + use tracing_subscriber::layer::Context;
   |
help: if you import `Context`, refer to it directly
   |
46 -     async fn execute(&self, _ctx: &mut ranvier_core::Context) -> ranvier_core::Result<Outcome> {
46 +     async fn execute(&self, _ctx: &mut Context) -> ranvier_core::Result<Outcome> {
   |

error[E0425]: cannot find type `Result` in crate `ranvier_core`
  --> examples\graphql-service-demo\src\main.rs:46:80
   |
46 |     async fn execute(&self, _ctx: &mut ranvier_core::Context) -> ranvier_core::Result<Outcome> {
   |                                                                                ^^^^^^ not found in `ranvier_core`
   |
help: consider importing one of these items
   |
 1 + use std::fmt::Result;
   |
 1 + use std::io::Result;
   |
 1 + use std::result::Result;
   |
 1 + use std::thread::Result;
   |
   = and 5 other candidates
help: if you import `Result`, refer to it directly
   |
46 -     async fn execute(&self, _ctx: &mut ranvier_core::Context) -> ranvier_core::Result<Outcome> {
46 +     async fn execute(&self, _ctx: &mut ranvier_core::Context) -> Result<Outcome> {
   |

warning: unused import: `Schematic`
 --> examples\graphql-service-demo\src\main.rs:2:26
  |
2 | use ranvier_core::{Axon, Schematic, Transition, Event, Outcome};
  |                          ^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

error[E0282]: type annotations needed
  --> examples\graphql-service-demo\src\main.rs:37:53
   |
37 |             Err(e) => Err(async_graphql::Error::new(e.to_string())),
   |                                                     ^ cannot infer type

error[E0107]: missing generics for trait `Transition`
  --> examples\graphql-service-demo\src\main.rs:45:6
   |
45 | impl Transition for StartWorkflow {
   |      ^^^^^^^^^^ expected 2 generic arguments
   |
note: trait defined here, with 2 generic parameters: `From`, `To`
  --> F:\project\ranvier\ranvier-workspace\ranvier\core\src\transition.rs:68:11
   |
68 | pub trait Transition<From, To>: Send + Sync + 'static
   |           ^^^^^^^^^^ ----  --
help: add missing generic arguments
   |
45 | impl Transition<From, To> for StartWorkflow {
   |                ++++++++++

error[E0599]: no variant or associated item named `done` found for enum `Outcome<T, E>` in the current scope
   --> examples\graphql-service-demo\src\main.rs:48:21
    |
 48 |         Ok(Outcome::done("completed"))
    |                     ^^^^ variant or associated item not found in `Outcome<_, _>`
    |
note: if you're trying to build a new `Outcome<_, _>` consider using one of the following associated functions:
      Outcome::<T, E>::next
      Outcome::<T, E>::branch
      Outcome::<T, E>::jump
      Outcome::<T, E>::emit
      Outcome::<T, E>::fault
   --> F:\project\ranvier\ranvier-workspace\ranvier\core\src\outcome.rs:146:5
    |
146 |     pub fn next(value: T) -> Self {
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
...
151 |     pub fn branch(id: impl Into<String>, payload: Option<serde_json::Value>) -> Self {
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
...
156 |     pub fn jump(id: Uuid, payload: Option<serde_json::Value>) -> Self {
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
...
161 |     pub fn emit(event_type: impl Into<String>, payload: Option<serde_json::Value>) -> Self {
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
...
166 |     pub fn fault(error: E) -> Self {
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0599]: no function or associated item named `build` found for struct `DemoSchematic` in the current scope
  --> examples\graphql-service-demo\src\main.rs:62:36
   |
53 | pub struct DemoSchematic {
   | ------------------------ function or associated item `build` not found for this struct
...
62 |     let schematic = DemoSchematic::build();
   |                                    ^^^^^ function or associated item not found in `DemoSchematic`

Some errors have detailed explanations: E0107, E0282, E0407, E0425, E0432, E0433, E0599.
For more information about an error, try `rustc --explain E0107`.
warning: `graphql-service-demo` (bin "graphql-service-demo") generated 1 warning
error: could not compile `graphql-service-demo` (bin "graphql-service-demo") due to 11 previous errors; 1 warning emitted
